# C_FILES

./: avr_io.c  avr_io.h  io.c  lcd.c  lcd.h  serial.c  timer.c  timer.h
Final_proj/final_project/: #auto_saved_files#  _autosave-final_project.kicad_sch  report.txt  sym-lib-table  ~final_project.kicad_sch.lck
Homework1/: CMakelists.txt  Homework1.docx  alarm_intf.c  alarm_intf.h  alarmfsm.c  main.c  warnfsm.c  ztimer.c  ~$mework1.docx
KICAD_FILES/: proj.kicad_pro  proj.kicad_sym
KICAD_FILES/digikey-kicad-library-master/digikey-symbols/: dk_Addressable-Specialty.kicad_sym  dk_Alarms-Buzzers-and-Sirens.kicad_sym  dk_Automotive-Relays.kicad_sym  dk_Balun.kicad_sym  dk_Banana-and-Tip-Connectors-Jacks-Plugs.kicad_sym  dk_Barrel-Audio-Connectors.kicad_sym  dk_Barrel-Power-Connectors.kicad_sym  dk_Battery-Holders-Clips-Contacts.kicad_sym  dk_Clock-Timing-Clock-Generators-PLLs-Frequency-Synthesizers.kicad_sym  dk_Clock-Timing-Programmable-Timers-and-Oscillators.kicad_sym  dk_Clock-Timing-Real-Time-Clocks.kicad_sym  dk_Coaxial-Connectors-RF.kicad_sym  dk_Crystals.kicad_sym  dk_Current-Sensors.kicad_sym  dk_D-Sub-Connectors.kicad_sym  dk_DC-DC-Converters.kicad_sym  (+134 more)
MAUR_DRONE/: CMakeLists.txt  gcc_open.c  gyro.h  i2c.c  i2c.h  i2c_test.c  main.c  motor.h  motor_control.h
New folder/: func_point.c
New folder/CALCULATOR/: CMakeLists.txt  TouchScreen.c  button.c  button.h  calclator.c  calculator.c  calculator.h  calculator_fsm.c  calculator_fsm.h  calculator_test.c  display.c  display.h  global.c  global.h  main.c  touchin_validation.c  touchin_validation.h  ts_lcd.h
